# FIT-SLAM

./: .dockerignore  .env  .gitignore  .gitmodules  BUILD_IMAGE.md  Dockerfile  FisherInformationTest.md  README.md  docker-compose.yml  merge_workspaces.sh  restore_previous_workspaces.sh  rmgit.py
dev_ws/src/DEPRECATED/frontier_exploration/frontier_exploration/: CMakeLists.txt  package.xml
dev_ws/src/DEPRECATED/frontier_exploration/frontier_exploration/comparision_scripts/: exploration_accuracy.cpp  exploration_path_followed_tf.cpp  explored_map_counter.cpp
dev_ws/src/DEPRECATED/frontier_exploration/frontier_exploration/launch/: active_slam.launch.py
dev_ws/src/DEPRECATED/frontier_exploration/frontier_exploration/params/: exploration_params.yaml
dev_ws/src/DEPRECATED/frontier_exploration/frontier_exploration/src/: CostCalculator.cpp  Frontier.cpp  Helpers.cpp  Nav2Interface.cpp
dev_ws/src/DEPRECATED/frontier_exploration/frontier_exploration/tests/: continous_fi_test.cpp  main_fim_computation.cpp  main_fisher_information_manager.cpp  nav2_interface_main.cpp
dev_ws/src/DEPRECATED/frontier_exploration/frontier_exploration/xml/: exploration_without_fi.xml  roadmap_planner.xml
dev_ws/src/fit-slam2/fit_slam2/: CMakeLists.txt  package.xml
dev_ws/src/fit-slam2/fit_slam2/launch/: active_slam_exploration.launch.py  active_slam_navigation.launch.py  light_exploration.launch.py  light_navigation.launch.py  orb_slam3.launch.py  rapid_exploration.launch.py  rapid_navigation.launch.py  traversability_mapping.launch.py
dev_ws/src/fit-slam2/fit_slam2/params/: active_slam_exploration_params.yaml  active_slam_nav2_params.yaml  light_exploration_params.yaml  light_nav2_params.yaml  rapid_exploration_params.yaml  rapid_nav2_params.yaml
dev_ws/src/fit-slam2/fit_slam2/rviz/: active_slam.rviz  light_exploration.rviz  rapid_exploration.rviz
dev_ws/src/fit-slam2/fit_slam2/xml/: active_slam_exploration.xml  active_slam_explore_to_pose.xml  light_exploration.xml  light_explore_to_pose.xml  rapid_exploration.xml
dev_ws/src/fit-slam2/fit_slam2_msgs/: CMakeLists.txt  package.xml
dev_ws/src/fit-slam2/fit_slam2_msgs/srv/: MarkLethal.srv
dev_ws/src/fit-slam2/fit_slam2_nav2_plugins/: CMakeLists.txt  README.md  keepout_layer.xml  package.xml
dev_ws/src/fit-slam2/fit_slam2_nav2_plugins/include/keepout_zones/: keepout_layer.hpp
dev_ws/src/fit-slam2/fit_slam2_nav2_plugins/plugins/: keepout_layer.cpp
dev_ws/src/fit-slam2/fit_slam2_recovery/: CMakeLists.txt  fit_slam2_recovery.xml  package.xml
dev_ws/src/fit-slam2/fit_slam2_recovery/include/fit_slam2_recovery/: bt_plugin.hpp  recovery_controller.hpp
dev_ws/src/fit-slam2/fit_slam2_recovery/src/: bt_plugin.cpp  recovery_controller.cpp
dev_ws/src/frontier_exploration/frontier_exploration/: CMakeLists.txt  bounded_explore_layer.xml  package.xml
dev_ws/src/frontier_exploration/frontier_exploration/comparision_scripts/: exploration_path_followed.cpp  exploration_path_followed_tf.cpp  explored_map_counter.cpp  map_covered.py
dev_ws/src/frontier_exploration/frontier_exploration/include/frontier_exploration/: CostAssigner.hpp  CostCalculator.hpp  ExplorationBT.hpp  FisherInfoManager.hpp  Frontier.hpp  FrontierCostsManager.hpp  FrontierSearch.hpp  FrontierSearchAllCells.hpp  FullPathOptimizer.hpp  GeometryUtils.hpp  Helpers.hpp  Nav2Interface.hpp  bounded_explore_layer.hpp  colorize.hpp  cost_calculator.hpp  costmap_tools.hpp  event_logger.hpp  explore_client.hpp  explore_server.hpp  frontier_search.hpp  frontier_selection.hpp  geometry_tools.hpp  helpers.hpp  lksdfjsdf  (+4 more)
dev_ws/src/frontier_exploration/frontier_exploration/launch/: active_slam.launch.py  exploration.launch.py  exploration_data.launch.py
dev_ws/src/frontier_exploration/frontier_exploration/params/: exploration.yaml  exploration_params.yaml  exploration_params.yaml.bak
dev_ws/src/frontier_exploration/frontier_exploration/plugins/: bounded_explore_layer.cpp
dev_ws/src/frontier_exploration/frontier_exploration/src/: CostAssigner.cpp  CostCalculator.cpp  ExplorationBT.cpp  FisherInfoManager.cpp  Frontier.cpp  FrontierCostsManager.cpp  FrontierSearch.cpp  FrontierSearchAllCells.cpp  FullPathOptimizer.cpp  FullPathOptimizerBackup.cpp  Helpers.cpp  Nav2Interface.cpp  Parameters.cpp  cost_calculator.cpp  event_logger.cpp  explore_client.cpp  explore_server.cpp  frontier_search.cpp  frontier_selection.cpp  goal_allocation_server.cpp  hash_test.cpp  kdtree.cpp  main.cpp  mthread.cpp  occ_map_publisher.cpp  planner.cpp  polygon_point_publisher.cpp  rosVisualizer.cpp  sdfsdf  srv_cl.cpp  traversability_nav_server.cpp  traversability_thresholded.cpp  ty.cpp
dev_ws/src/frontier_exploration/frontier_exploration/tests/: fim_viz.cpp  frontier_class.cpp  logger_test.cpp  main_fisher_information_manager.cpp  pose_fi_test.cpp
dev_ws/src/frontier_exploration/frontier_exploration/xml/: exploration.xml  exploration_with_fi.xml  exploration_without_fi.xml  lethal_marker.xml
dev_ws/src/frontier_exploration/frontier_exploration_rviz_plugin/: package.xml  plugin_description.xml
dev_ws/src/frontier_exploration/frontier_msgs/: CMakeLists.txt  package.xml
dev_ws/src/frontier_exploration/frontier_msgs/action/: ExploreTask.action
dev_ws/src/frontier_exploration/frontier_msgs/msg/: Frontier.msg  LoadFrontierCosts.msg
dev_ws/src/frontier_exploration/frontier_msgs/srv/: GetAllocatedGoal.srv  GetCurrentGoal.srv  GetFrontierCosts.srv  GetNextFrontier.srv  LoadFrontierCosts.srv  MarkLethal.srv  SendCurrentGoal.srv
dev_ws/src/frontier_roadmap_planner/: CMakeLists.txt  package.xml  roadmap_planner.xml
dev_ws/src/frontier_roadmap_planner/include/frontier_roadmap_planner/: roadmap_planner_plugin.hpp
dev_ws/src/frontier_roadmap_planner/src/: roadmap_planner_plugin.cpp
dev_ws/src/traversability_packages/traversability_packages/traversability_gridmap/: CMakeLists.txt  package.xml  traversability_layer.xml
dev_ws/src/traversability_packages/traversability_packages/traversability_msgs/: CMakeLists.txt  package.xml
ros2_ws/src/scout_v2/scout_ros2/scout_control/: CMakeLists.txt  package.xml
(+324 files in other folders)
