<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>fit_slam2_nav2_plugins</name>
  <version>1.1.0</version>
  <description>A package.</description>
  <maintainer email="rssuchetan@gmail.com">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>nav_msgs</depend>
  <depend version_gte="2.1.0">cb_isds_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>nav2_util</depend>
  <depend>sensor_msgs</depend>
  <depend>nav2_costmap_2d</depend>
  <depend>fit_slam2_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
