<?xml version="1.0"?>
<package format="3">
  <name>frontier_exploration</name>
  <version>0.1.0</version>
  <description>Frontier exploration package</description>

  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
  <license>GPLv3</license>

  <depend>rosidl_default_generators</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav2_costmap_2d</build_depend>
  <build_depend>frontier_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>sensor_msgs</build_depend>
  
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>
  <exec_depend>frontier_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>pcl_ros</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>