<?xml version="1.0"?>
<package format="2">
  <name>frontier_exploration_rviz_plugin</name>
  <version>0.10.3</version>
  <description>Tutorials showing how to write plugins for RViz.</description>
  <maintainer email="rssuchetan@gmail.com">Suchetan</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/frontier_exploration_rviz_plugin</url>
  <author></author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>geometry_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>sensor_msgs</depend>

  <build_depend>qtbase5-dev</build_depend>

  <exec_depend>libqt5-core</exec_depend>
  <exec_depend>libqt5-gui</exec_depend>
  <exec_depend>libqt5-widgets</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
      <build_type>ament_cmake</build_type>
  </export>
</package>
