<?xml version="1.0"?>
<package format="3">
  <name>frontier_msgs</name>
  <version>0.1.0</version>
  <description>A package that includes geom_try and geometry_tools.h</description>

  <maintainer email="paul@bovbel.com">Paul Bovbel</maintainer>
  <license>GPLv3</license>

  <depend>rosidl_default_generators</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <build_depend>rclcpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>nav2_costmap_2d</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_costmap_2d</exec_depend>


  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>